# master

./: .completions.sh  .gitignore  Cargo.toml  README.md
benches/: dyft_bench.rs  fresh_bench.rs
config/: dyft-1.toml  dyft-2.toml  dyft-3.toml  dyft-4.toml  dyft-5.toml  fresh-1.toml  fresh-2.toml  fresh-3.toml  fresh-4.toml  fresh-5.toml
data/: README.md
examples/: create-distance-matrix.rs  export-trie.rs  hash.rs  linear-search.rs  write-hashes.rs
runtimes/dyft-build-benchmark-DBB-1/report/: index.html
runtimes/dyft-build-benchmark-DBB-2/report/: index.html
runtimes/dyft-build-benchmark-DBB-3/report/: index.html
runtimes/dyft-build-benchmark-DBB-4/report/: index.html
runtimes/dyft-build-benchmark-DBB-5/report/: index.html
runtimes/dyft-build-benchmark-DBP-1/report/: index.html
runtimes/dyft-build-benchmark-DBP-2/report/: index.html
runtimes/dyft-build-benchmark-DBP-3/report/: index.html
runtimes/dyft-build-benchmark-DBP-4/report/: index.html
scripts/: README.md  analyze-results.py  backwards.py  create-benchmark.py  extract-trajectories.py  fresh-util.py  fuzz-params.py  hash-analysis.py  percentile-distances.py  plot-trajectories.py  plot-trie.py  porto.py  requirements.txt  split-thresholds.py  util.py
src/: benchmarks.rs  config.rs  dyft_index.rs  fresh_index.rs  id.rs  io.rs  lib.rs  params.rs  point.rs  trajectory.rs
src/dyft/: byte_pack.rs  dyft.rs  io.rs  mod.rs
src/frechet/: mod.rs
src/fresh/: mod.rs  multi.rs  table.rs
src/lsh/: constant.rs  linear.rs  mod.rs  tensored.rs  traits.rs  util.rs
src/util/: mod.rs
(+501 files in other folders)
